Fixed Firebox bug where meal cards would have no spacing between them

--- a/frontend/gui/src/containers/index.css
+++ b/frontend/gui/src/containers/index.css
@@ -619,6 +619,10 @@ input::-webkit-inner-spin-button {
     align-items: center;
 }
 
+.colMealCards .mealCard{
+    margin-top: 20px;
+}
+
 .nutritionCardToggle {
     transition: height .3s, opacity .3s;
 }
@@ -1518,6 +1522,10 @@ input::-webkit-inner-spin-button {
                        SAVED MEALS
 =======================================================
 */
+
+.avatarSaved {
+    fill: #fff !important;
+}
 
 .savedMeals .ant-pagination {
     display: flex;
